--- a/Lab 6/src/app/app.component.html
+++ b/Lab 6/src/app/app.component.html
@@ -1,16 +1,14 @@
 <app-top-bar></app-top-bar>
 
 <div class="container">
-  <nav>
-    <ul>
-      <li><a routerLink="/home-page">Home</a> </li>
-      <li><a routerLink="/about">About</a></li>
-      <li><a routerLink="/product-list">Albums</a></li>
-    </ul>
-  </nav>
-  
-  <router-outlet></router-outlet>
+  <ul> 
+    <li> <a routerLink="/home">Home</a> </li>
+    <li> <a routerLink="/about">About</a> </li>
+    <li> <a routerLink="/albums">Albums</a> </li>
+  </ul>
 </div>
+<hr>
+  <router-outlet></router-outlet>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
