--- a/Lab_10/hh_front/src/app/companies/companies.component.html
+++ b/Lab_10/hh_front/src/app/companies/companies.component.html
@@ -1,12 +1,14 @@
-<h1>Companies</h1>
+<h1 style="text-align: center">Companies</h1>
 
 <ul>
     <li *ngFor="let company of companies">
         <a [routerLink]="['/companies', company.id, 'vacancies']">
-            id: {{company.id}},<br> name: {{company.name}},<br> description: {{company.description}},<br>
-            city: {{company.city}},<br> address: {{company.address}}
-          <hr>
+          <button>{{company.name}}</button> <br>
         </a>
+            <h3>Information:</h3>
+              id: {{company.id}},<br> description: {{company.description}},<br>
+              city: {{company.city}},<br> address: {{company.address}}
+      <hr>
     </li>
 </ul>
 
